2008-03-01  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/bsdyengine.*: Add a renderQuick function to
	this engine. Selected atoms/bonds rendered as opaque objects using the
	selection colour. Multiple bonds are not displayed. No transparency.

2008-02-29  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engine.h: API cleanup - remove the second unused
	argument from the quickRender function.

	* libavogadro/src/glwidget.cpp,
	libavogadro/src/engines/labelengine.*,
	libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/ribbonengine.*: Ported to use the new
	quickRender function.

	* libavogadro/src/glwidget.cpp: Correct a bug in the setSelected
	function which was causing it to toggle the selection rather than set
	it as the calling functions were expecting.

	* avogadro/src/mainwindow.cpp: Revert the earlier fix as setSelected
	now works as expected.

	* libavogadro/src/tools/selectrotatetool.cpp: Select atom should now
	also select bonds as well as atoms correctly.

	* avogadro/src/extensions/forcefieldextension.cpp: Disable the
	constraints menu item for now.

	* libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/orbitalsettingswidget.ui: Defaulted to not use
	interpolation, added a check box that will force interpolation.

	* libavogadro/src/engines/iso.h: Fixed the integer index based eval
	function to actually use the m_iso value set.

	* libavogadro/src/engines/iso.*: Added a new marching cubes function
	that does not use interpolation. This should significantly reduce the
	resources needed to calculated many surfaces.

	* libavogadro/src/engines/surfaceengine.cpp: Ported to use the new
	IsoGen class without interpolation - we calculate the VdW surface and
	so should never need to interpolate values.

	* libavogadro/src/engines/orbitalengine.cpp: Ported to continue
	interpolating for now. This engine should have optional interpolation
	but I need to hunt down a bug in the code first.
