@@ -1,3 +1,9 @@
+2008-03-04  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* libavogadro/src/glwidget.cpp: Add back in some makeCurrent calls
+	that really were necessary outside of the threaded GL #ifdefs. This
+	fixes PR#1906403.
+
 2008-03-01  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* libavogadro/src/engines/bsdyengine.*: Add a renderQuick function to
